# aerothemeplazma

./: CHANGELOG.md  DOCUMENTATION.md  INSTALL.md  LICENSE  README.md
Documentation/Software/KWin/: AeroColorMixer.md  Reflection.md  Smaragd.md
Documentation/Software/Plasmoids/: SevenStart.md  SevenTasks.md  System-Tray.md
Documentation/Themes/: Seven-Black.md  Smaragd-Theme.md
GTK3/GTK_3.0_custom_css/: gtk.css
Icons and cursors/windows_eight/: index.theme
Icons and cursors/windowsicon/: create_dirs.sh  duplicate_icon.sh  icon-theme.cache  index.theme
KDE Plasma Theme/AeroColorMixer/: AeroColorMixer.pro  colorwindow.cpp  colorwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
KDE Plasma Theme/Seven-Black/: colors  metadata.desktop
KDE Plasma Theme/Seven-Black/bicons/: .directory
KDE Plasma Theme/Seven-Black/dialogs/: background.svgz.bak  background_BACKUP.svgz  background_OLD.svgz  background_WIP.svgz  background_air.svgz
KDE Plasma Theme/Seven-Black/icons/: network.svgz  notification.svgz
KDE Plasma Theme/Seven-Black/widgets/: actionbutton.svgz  arrows.svgz  button.svgz  button.svgz.ba  panel-background.svgz  panel-background.svgz.bak  panel-background_b.svgz  plasmoidheading.svgz  scrollbar.svgz  tabbar.svgz  tasks.svgz  tasks_try1.svgz  tooltip.svg.b  tooltip.svgz  tooltip.svgz.bak  translucentbackground.svgz  translucentbackground_backup.svgz  viewitem.svgz
KWin/.emerald/: settings.ini
KWin/.emerald/theme/: theme copy.ini  theme.ini
KWin/kwin_reflect/: CMakeLists.txt  install
KWin/kwin_reflect/src/: CMakeLists.txt  blur.cpp  blur.h  blur.kcfg  blur.qrc  blur_config.json  blurshader.cpp  blurshader.h  main.cpp  metadata.json
KWin/kwin_reflect/src/kcm/: CMakeLists.txt  blur_config.cpp  blur_config.desktop  blur_config.h  blur_config.ui  colorwindow.cpp  colorwindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
KWin/kwin_reflect/src/shaders/: color.frag  color_core.frag  reflect.frag  reflect_core.frag
KWin/thumbnail_seven/: metadata.json
Plasma Widgets/SevenStart/: metadata.desktop
Plasma/Color_Scheme/: AeroColorScheme.colors
Plasma/Plasma Widgets/User/Task Icons/seventasks_src/src/: CMakeLists.txt  seventasks.cpp  seventasks.h
Plasma/Plasma Widgets/User/Task Icons/seventasks_src/src/package/: metadata.desktop
Plasma/Plasma Widgets/User/Task Icons/seventasks_src/src/package/contents/ui/: AudioStream.qml  Task.qml  ToolTipInstance.qml  main.qml
Screenshots/: hovertask.webm  starthover.webm
Sounds/media_windows/: Desktop.ini
Testing/: install.sh
Window Manager/.emerald/: settings.ini
Window Manager/smaragd-0.1.1/: README  install.sh
(+232 files in other folders)
